@@ -2188,7 +2188,10 @@ call_sub(...)
         if (return_value != NULL) {
           env->inc_ref_count(env, return_value);
           
-          if (sub->return_runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_STRING || sub->return_type_dimension > 0) {
+          if (sub->return_runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_STRING) {
+            sv_return_value = SPVM_XS_UTIL_new_sv_object(env, return_value, "SPVM::Data::Array");
+          }
+          else if (sub->return_type_dimension > 0) {
             sv_return_value = SPVM_XS_UTIL_new_sv_object(env, return_value, "SPVM::Data::Array");
           }
           else if (sub->return_type_dimension == 0) {
@@ -2428,8 +2431,8 @@ to_elements(...)
   // Runtime
   SPVM_RUNTIME* runtime = (SPVM_RUNTIME*)env->runtime;
 
-  // Array must be SPVM::Data::Array object
-  if (!(SvROK(sv_array) && sv_derived_from(sv_array, "SPVM::Data::Array"))) {
+  // Array must be SPVM::Data::Array or SPVM::Data::String
+  if (!(SvROK(sv_array) && (sv_derived_from(sv_array, "SPVM::Data::Array") || sv_derived_from(sv_array, "SPVM::Data::String")))) {
     croak("Array must be SPVM::Data::Array object");
   }
   
@@ -2443,7 +2446,17 @@ to_elements(...)
   int32_t is_array_type = dimension > 0;
   
   AV* av_values = (AV*)sv_2mortal((SV*)newAV());
-  if (is_array_type) {
+  if (array->runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_STRING) {
+    int8_t* elements = env->get_byte_array_elements(env, array);
+    {
+      int32_t i;
+      for (i = 0; i < length; i++) {
+        SV* sv_value = sv_2mortal(newSViv(elements[i]));
+        av_push(av_values, SvREFCNT_inc(sv_value));
+      }
+    }
+  }
+  else if (is_array_type) {
     SPVM_RUNTIME_BASIC_TYPE* basic_type = &runtime->basic_types[basic_type_id];
     int32_t element_type_dimension = dimension - 1;
 
@@ -2630,9 +2643,9 @@ to_binary(...)
   // Runtime
   SPVM_RUNTIME* runtime = (SPVM_RUNTIME*)env->runtime;
 
-  // Array must be SPVM::Data::Array object
-  if (!(SvROK(sv_array) && sv_derived_from(sv_array, "SPVM::Data::Array"))) {
-    croak("Array must be SPVM::Data::Array object");
+  // Array must be SPVM::Data::Array object or SPVM::Data::Sgtring
+  if (!(SvROK(sv_array) && (sv_derived_from(sv_array, "SPVM::Data::Array") || sv_derived_from(sv_array, "SPVM::Data::String")))) {
+    croak("Data must be SPVM::Data::Array or SPVM::Data::String");
   }
   
   // Get object
@@ -2645,7 +2658,12 @@ to_binary(...)
   int32_t is_array_type = dimension > 0;
   
   SV* sv_bin;
-  if (is_array_type) {
+  if (array->runtime_type == SPVM_TYPE_C_RUNTIME_TYPE_STRING) {
+    int8_t* elements = env->get_byte_array_elements(env, array);
+    
+    sv_bin = sv_2mortal(newSVpvn((char*)elements, length));
+  }
+  else if (is_array_type) {
     SPVM_RUNTIME_BASIC_TYPE* basic_type = &runtime->basic_types[basic_type_id];
     int32_t element_type_dimension = dimension - 1;
 
