@@ -1,6 +1,16 @@
 package SPVM::ExchangeAPI;
 
-# All functions is implemented in SPVM.xs
+use Encode 'decode';
+
+sub to_string {
+  my $binary = SPVM::ExchangeAPI::to_binary(@_);
+  
+  my $string = decode('UTF-8', $binary);
+  
+  return $string;
+}
+
+# other functions is implemented in SPVM.xs
 
 1;
 
